@@ -12,6 +12,9 @@ What's New in Python 2.7 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #3652: Make the 'line' argument for warnings.showwarning() a
+  requirement.  Means the DeprecationWarning from Python 2.6 can go away.
+
 - Issue #5247: Improve error message when unknown format codes are
   used when using str.format() with str, unicode, long, int, and
   float arguments.
